fix(kit): `Select`, `ComboBox`, `MultiSelect` cut overflown items with ellipsis (#446)

--- a/projects/core/components/data-list/option/option.style.less
+++ b/projects/core/components/data-list/option/option.style.less
@@ -51,6 +51,8 @@
 .content {
     display: flex;
     flex: 1;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .arrow {
