--- a/projects/kit/components/select-option/select-option.style.less
+++ b/projects/kit/components/select-option/select-option.style.less
@@ -2,6 +2,8 @@
     display: flex;
     flex: 1;
     align-items: center;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .checkmark {
